2008-12-01  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: 
	Wrap formatted field content in a div, not a span.

	* pytis/web/field.py:
	Ignore the surrounding paragraph if a formatted field has just one
	paragraph.

2008-11-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/data/types_.py:
	* lib/pytis/web/__init__.py:
	* translations/Makefile:
	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	Fixes of the previous translation changes.

2008-11-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/web/__init__.py:
	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	String length constraint messages slightly improved.

2008-11-03  Milan Zamazal  <pdm@brailcom.org>

	* translations/Makefile:
	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	Include lib/data/types_.py into translations.
	Translate some Czech messages.

2008-11-03  Milan Zamazal  <pdm@brailcom.org>

	* translations/pytis.cs.po:
	* translations/pytis.de.po:
	* translations/pytis.es.po:
	* translations/pytis.fr.po:
	* translations/pytis.hu.po:
	* translations/pytis.pl.po:
	* translations/pytis.sk.po:
	Translations updated.

2008-10-30  Tomas Cerha  <cerha@brailcom.org>

	* pytis/form/form.py:
	Check column existence in restored conditions using two columns as
	operands.
	
	* pytis/form/form.py:
	* pytis/form/application.py: 
	Ask for removal of invalid saved filter.

	* pytis/form/list.py:
	Recover after invalid filter application.

2008-10-29  Tomas Cerha  <cerha@brailcom.org>

	* pytis/web/form.py: